--- a/企画書.md
+++ b/企画書.md
@@ -18,7 +18,7 @@
 
 - **「Getting Over It」系の高難易度登攀ゲームは配信映えするが、リトライ性が低く飽きやすい**
 - **ローグライク要素（育成・コレクション）を組み合わせることで、リプレイ性を向上**
-- **低価格・短時間クリアで、配信者が「1回の配信で完結」できる設計を狙う**
+- **低価格・短時間クリアで、配信者が「1回の配信で完結」できる設計を狙う**a
 
 ### 2.2 目的
 
